Feat: Add toast notifications for error handling and update deleteSubject logic to prevent orphan records

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="frontend/img/favicon.png">
   <link rel="stylesheet" href="frontend/css/w3.css" />
   <link rel="stylesheet" href="frontend/css/styles.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
 <body class="w3-container">
@@ -16,12 +17,13 @@
   <header>
     <h2 class="w3-center w3-margin-top">Panel Principal</h2>
   </header>
-  
+
   <main class="w3-bar w3-center">
-    <a class="w3-btn w3-black" href="frontend/html/students.html">Gestión de Estudiantes</a> 
-    <a class="w3-btn w3-black" href="frontend/html/subjects.html">Gestión de Materias</a> 
-    <a class="w3-btn w3-black" href="frontend/html/studentsSubjects.html">Asignación de Materias a Estudiantes</a> 
+    <a class="w3-btn w3-black" href="frontend/html/students.html">Gestión de Estudiantes</a>
+    <a class="w3-btn w3-black" href="frontend/html/subjects.html">Gestión de Materias</a>
+    <a class="w3-btn w3-black" href="frontend/html/studentsSubjects.html">Asignación de Materias a Estudiantes</a>
   </main>
 
 </body>
+
 </html>
