Refactor toast utility and update styles for notifications

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gestión de Educativa</title>
   <link rel="icon" type="image/png" sizes="32x32" href="frontend/img/favicon.png">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   <link rel="stylesheet" href="frontend/css/w3.css" />
   <link rel="stylesheet" href="frontend/css/styles.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <link rel="stylesheet" href="frontend/css/toaster.css" />
 </head>
 
 <body class="w3-container">
