--- a/frontend/html/subjects.html
+++ b/frontend/html/subjects.html
@@ -1,15 +1,16 @@
 <!-- frontend/html/subjects.html -->
 <!DOCTYPE html>
 <html lang="es">
-  
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gestión de Materias</title>
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon.png">
-  <link rel="stylesheet" href="../css/w3.css" />
-  <link rel="stylesheet" href="../css/styles.css" />
-  <script type="module" src="../js/controllers/subjectsController.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <link rel="stylesheet" href="frontend/css/w3.css" />
+  <link rel="stylesheet" href="frontend/css/styles.css" />
+  <link rel="stylesheet" href="frontend/css/toaster.css" />
 </head>
 
 <body class="w3-container">
@@ -45,6 +46,7 @@
   <footer class="w3-center w3-margin-top">
     <a class="w3-btn w3-black" href="../../index.html">Volver al Panel Principal</a>
   </footer>
-  
+
 </body>
+
 </html>
