Fix: Correct stylesheet paths in students.html for proper loading

--- a/frontend/html/students.html
+++ b/frontend/html/students.html
@@ -8,9 +8,9 @@
   <title>Gestión de Estudiantes</title>
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-  <link rel="stylesheet" href="frontend/css/w3.css" />
-  <link rel="stylesheet" href="frontend/css/styles.css" />
-  <link rel="stylesheet" href="frontend/css/toaster.css" />
+  <link rel="stylesheet" href="../css/w3.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="../css/toaster.css" />
 </head>
 
 <body class="w3-container">
