Fix: Comment out Toastify CSS link in subjects.html to prevent loading issues

--- a/frontend/html/subjects.html
+++ b/frontend/html/subjects.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gestión de Materias</title>
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon.png">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"> -->
   <link rel="stylesheet" href="../css/w3.css" />
   <link rel="stylesheet" href="../css/styles.css" />
   <link rel="stylesheet" href="../css/toaster.css" />
