--- a/frontend/html/studentsSubjects.html
+++ b/frontend/html/studentsSubjects.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../css/w3.css" />
   <link rel="stylesheet" href="../css/styles.css" />
   <link rel="stylesheet" href="../css/toaster.css" />
+  <script type="module" src="../js/controllers/studentsSubjectsController.js"></script>
 </head>
 
 <body class="w3-container">
